<resources>
    <string name="app_name">RG2</string>

    <string name="wrong">Что-то пошло не так. Попробуйте повторить операцию</string>

    <string name="action_info">Инфо</string>
    <string name="action_learn">Обучалки</string>
    <string name="action_games">Тренажеры</string>
    <string name="main_settings">Настройки</string>
    <string name="games_help">Помощь</string>
    <string name="games_azbuka_select">Выбор азбуки</string>

    <string name="info">Инфо</string>
    <string name="commentText">Комментарий:</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
        ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
        in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
        non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="backText">Назад</string>
    <string name="antons_azbuka">Азбука Антона</string>
    <string name="maksims_azbuka">Азбука Максима</string>
    <string name="save_azbuka">Сохранить текущую азбуку</string>
    <string name="load_azbuka">Загрузить сохраненную азбуку</string>
    <string name="set_letter">Выберите букву</string>
    <string name="games_scramble_generator">Генератор скрамблов</string>
    <string name="azbukaButtonText">Стороны/азбука</string>
    <string name="buttonScrambleGen">Генерировать скрамбл</string>
    <string name="chkBoxEdgeBuffer">Без переплавки буфера ребер</string>
    <string name="chkBoxCornerBuffer">Без переплавки буфера углов</string>
    <string name="scrambleLengthText">Длина скрамбла:</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="scrambleText">Скрамбл:</string>
    <string name="scramble_def_value">R F L B U2 L B\' R F\' D B R L F D R\' D L</string>
    <string name="scramble_def_solve">(А Г Ш Т Р Ц Л З Ж) (Ж П М Ф Б В)</string>
    <string name="timerText">Таймер</string>
    <string name="checkBoxSolveText">Решение: </string>
    <string name="set_scramble">Задайте скрамбл</string>
    <string name="games_timer">Таймер</string>
    <string name="result">Результаты:</string>

    <string name="timer_settings">Настройки таймера</string>
    <string name="timer_is_delayed">Удерживать 0.5 сек для старта</string>
    <string name="timer_is_one_handed">Управление таймером одной рукой</string>
    <string name="timer_metronom">Метроном</string>
    <string name="timer_metronom_frequency">Частота метронома: тактов/мин</string>
    <string name="timer_scramble_generate">Отображать скрамбл</string>
    <string name="timer_need_back_button">Отображать кнопку \"Назад\"</string>
    <string name="azbuka_dialog_title">Азбука вращений</string>
    <string name="timer_resault_title">Список результатов</string>
    <string name="favorites_dialog_title">Избранное</string>
    <string name="edit_time_note_item">Редактирование записи</string>
    <string name="delete_item">Удалить запись</string>
    <string name="ok">OK</string>
    <string name="cancel">Отмена</string>
    <string name="edit_comment">Введите коментарий:</string>
    <string name="edit_comment_hint">Например, был OLL скип</string>
    <string name="save_result">Сохранить результат?</string>
    <string name="settings">Настройки</string>
    <string name="appTheme">Тема приложения:</string>
    <string name="dark_theme">Темная тема</string>
    <string name="light_theme">Светлая тема</string>
    <string name="main_settings2">НастройкиNew</string>
    <string name="fab_button">Плавающая кнопка:</string>
    <string name="show_fab_text">Отображать плавающую кнопку для возможности вернуться на шаг назад в основном меню. Пригодится, если у вас нет экранной или аппартной кнопки "назад"</string>
    <string name="azbuka_training">Тренировка азбуки</string>
    <string name="azbuka_training_settings">Настройки</string>
    <string name="corners">Углы</string>
    <string name="edges">Ребра</string>
    <string name="training">Что тренируем:</string>
    <string name="font_size_text">Размер шрифта</string>
    <string name="training_timer_text">Игра на время</string>
    <string name="training_timer_time">Время для ответа (сек.)</string>
    <string name="right_answer">Правильно</string>
    <string name="wrong_answer">Нет - это Р</string>
    <string name="wrong_answer_text">Нет - это</string>
    <string name="time_is_over">Время вышло. Это -</string>
    <string name="please_waiting">Подождите, пожалуйста</string>
    <string name="continue_game">Продолжить</string>
    <string name="stop_game">Заново</string>
    <string name="start">Начать</string>
    <string name="app_description">RubicsGuide 2 - обучение сборке кубика Рубика</string>
    <string name="please_donate">Если вы хотите поддержать проект, а заодно отключить периодический переход на эту страницу при запуске программы, то выберите любой из ниже перечисленных вариантов поддержки.</string>
    <string name="big_thanks">Спасибо, что поддержали проект!</string>
    <string name="reklama">А тут вы сможете приобрести понравившиеся головоломки с логотипом программы</string>
    <string name="open_url_promo">Используйте промокод \"<b>RG2</b>\", чтобы получить наклейку с логотипом программы в подарок</string>
    <string name="goto_market"><b>Перейти на сайт</b></string>
    <string name="display_options">Отключение экрана</string>
    <string name="do_not_turn_off_display">Не отключать экран когда запущено приложение (требуется перезапуск)</string>
    <string name="do_not_turn_off_youtube_display">Не отключать экран когда в видео нажата пауза (требуется перезапуск)</string>
    <string name="text_selecting">Выделение текста</string>
    <string name="is_text_selectable">возможность выделить и скопировать текст из обучалки. При включении, возможны проблемы со скроллингом на некоторых устройствах, например, Meizu M3 Note</string>
    <string name="pll_training">Тренировка PLL</string>
    <string name="pll_training_settings">Настройки</string>
    <string name="two_side_recognition_text">Определение по 2-м сторонам</string>
    <string name="three_side_recognition_text">Определение по 3-м стороная</string>
    <string name="answer_variants">Варианты ответов:</string>
    <string name="all_plls">Сразу все PLL (стандартные названия)</string>
    <string name="some_plls">Несколько вариантов (любые названия)</string>
    <string name="pll_answer_count_text">Количество вариантов</string>
    <string name="select_pll_alg">Выбрать/Перименовать алгоритмы</string>
    <string name="pll_showing_name">Название для кнопок:</string>
    <string name="loadUserNames">Загрузить сохраненные</string>
    <string name="saveCurrentPllNames">Сохранить текущие</string>
    <string name="LoadMaximPllNames">Максимкины названия</string>
    <string name="LoadStdPllNames">Стандартные названия</string>
    <string name="PllNamesSettings">Настройки PLL алгоритмов</string>
    <string name="pll_random_side">Случайная сторона</string>
    <string name="main_games_clicked">Тренажеры</string>
    <string name="day_tips">Совет дня:</string>
    <string name="about_programm">О программе</string>
    <string name="thanks_programm">Спасибо</string>
    <string name="tips_programm">Советы</string>

    <string name="donation_successful">Спасибо за поддержку! ❤️</string>
    <string name="donation_failed">Что-то пошло не так. 😕</string>
    <string name="textToShare1">Лучшее приложение по обучению сборки кубика Рубика и других головоломок:</string>
    <string name="textToShare2">Канал в YouTube: https://www.youtube.com/channel/UCpSUF7w376aCRRvzkoNoAfQ</string>
    <string name="shareTitle">Поделиться ссылками на программу</string>
    <string name="editCommentHint">или алгоритм</string>
    <string name="editCommentTitle">Напишите свой комментарий:</string>
    <string name="favourite_hint">Открывайте, удаляйте или меняйте местами выбранные обучалки</string>
    <string name="mini_help_settings_text">Подсказки по программе</string>
    <string name="mini_help_settings_switch_text">Отображение подсказок по интерфейсу при загрузке программы</string>
    <string name="check_internet_access">Проверьте доступность интернета</string>
    <string name="youtube_video_warning">Используемые в программе видео занимают очень много места и сохранить их все в памяти телефона НЕВОЗМОЖНО, поэтому для просмотра видео требуется интернет. Вы можете ограничить использование интернета программой.</string>
    <string name="use_all_internet">Использовать любой доступный интернет (3G/4G/Wi-Fi)</string>
    <string name="use_wifi">Использовать только Wi-Fi</string>
    <string name="do_not_use_internet">Не использовать интернет (без просмотра видео)</string>
    <string name="using_internet">Использование интернета</string>
    <string name="tap_to_see_hint">Нажмите, чтобы увидеть название</string>
</resources>
