<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="ru.tohaman.rg2.ui.settings.SettingsViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">

        <include
            android:id="@+id/appBar"
            layout="@layout/include_app_bar"
            app:tabbed="@{false}"
            app:title="@{@string/main_settings}" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/middle_margin"
                android:layout_marginRight="@dimen/middle_margin"
                android:orientation="vertical">

                <TextView
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/appTheme" />


                <RadioButton
                    android:id="@+id/dark_theme"
                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/big_margin"
                    android:checked="@={viewModel.isThemeDark()}"
                    android:layoutDirection="rtl"
                    android:onClick="@{() -> viewModel.darkThemeSelect()}"
                    android:text="@string/dark_theme" />

                <RadioButton
                    android:id="@+id/light_theme"
                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/big_margin"
                    android:checked="@={!viewModel.isThemeDark()}"
                    android:layoutDirection="rtl"
                    android:onClick="@{() -> viewModel.lightThemeSelect()}"
                    android:text="@string/light_theme" />

                <TextView
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/big_margin"
                    android:layout_marginBottom="@dimen/middle_margin"
                    android:text="@string/font_size_text" />

                <SeekBar
                    android:id="@+id/seekBar2"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/big_margin"
                    android:max="5"
                    android:padding="@dimen/mid_padding"
                    android:progress="@{viewModel.textSize}"
                    app:onSeekListener="@{viewModel.onTextSeek()}" />


                <TextView
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/big_margin"
                    android:layout_marginBottom="@dimen/small_margin"
                    android:text="@string/fab_button" />

                <Switch
                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/big_margin"
                    android:checked="@={viewModel.needShowFab}"
                    android:onCheckedChanged="@{(switch, checked) -> viewModel.needShowFabChange(checked)}"
                    android:switchPadding="@dimen/dimen_margin_8"
                    android:text="@string/show_fab_text"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/big_margin"
                    android:layout_marginBottom="@dimen/small_margin"
                    android:text="@string/display_options" />

                <Switch
                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/big_margin"
                    android:layout_marginBottom="@dimen/middle_margin"
                    android:checked="@={viewModel.isScreenAlwaysOn}"
                    android:onCheckedChanged="@{(switch, checked) -> viewModel.isScreenAlwaysOnChange(checked)}"
                    android:switchPadding="@dimen/dimen_margin_8"
                    android:text="@string/do_not_turn_off_display"
                    tools:ignore="RtlHardcoded" />

                <Switch
                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/big_margin"
                    android:checked="@={viewModel.isYoutubeScreenAlwaysOn}"
                    android:onCheckedChanged="@{(switch, checked) -> viewModel.isYoutubeScreenAlwaysOnChange(checked)}"
                    android:switchPadding="@dimen/dimen_margin_8"
                    android:text="@string/do_not_turn_off_youtube_display"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/big_margin"
                    android:layout_marginBottom="@dimen/small_margin"
                    android:text="@string/text_selecting" />

                <Switch
                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/big_margin"
                    android:checked="@={viewModel.isTextSelectable}"
                    android:onCheckedChanged="@{(switch, checked) -> viewModel.isTextSelectableChange(checked)}"
                    android:switchPadding="@dimen/dimen_margin_8"
                    android:text="@string/is_text_selectable"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/big_margin"
                    android:layout_marginBottom="@dimen/small_margin"
                    android:text="@string/mini_help_settings_text" />

                <Switch
                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/big_margin"
                    android:checked="@={viewModel.onStartMiniHelp}"
                    android:onCheckedChanged="@{(switch, checked) -> viewModel.isOnStartMiniHelpEnabled(checked)}"
                    android:switchPadding="@dimen/dimen_margin_8"
                    android:text="@string/mini_help_settings_switch_text"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/big_margin"
                    android:layout_marginBottom="@dimen/small_margin"
                    android:text="Использование интернета" />

                <TextView
                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/big_margin"
                    android:layout_marginBottom="@dimen/small_margin"
                    android:text="Все используемые в программе видео занимают очень много места (не один Тб) и сохранять их все в памяти телефона не имеет смысла, поэтому используется онлайн просмотр видео и для их просмотра требуется интернет. Вы можете ограничить использование интернета программой." />

                <RadioButton
                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/big_margin"
                    android:checked="@={viewModel.allInternet}"
                    android:layoutDirection="rtl"
                    android:onClick="@{() -> viewModel.allInternetSelect()}"
                    android:text="Любой доступный интернет (3G/4G/Wi-Fi)" />

                <RadioButton
                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/big_margin"
                    android:checked="@={viewModel.onlyWiFi}"
                    android:layoutDirection="rtl"
                    android:onClick="@{() -> viewModel.onlyWiFiSelect()}"
                    android:text="Только Wi-Fi" />

                <RadioButton
                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/big_margin"
                    android:checked="@={viewModel.doNotUseInternet}"
                    android:layoutDirection="rtl"
                    android:onClick="@{() -> viewModel.doNotUseInternetSelect()}"
                    android:text="Не использовать интернет (без просмотра видео)"/>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>