<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_margin_8"
            android:gravity="center"
            android:orientation="vertical">

            <GridView
                android:id="@+id/azbuka_gridView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:horizontalSpacing="1dp"
                android:numColumns="12"
                android:stretchMode="columnWidth"
                android:verticalSpacing="1dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="h,4:3"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </GridView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            style="?android:attr/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_my_azbuka"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_margin_8"
                android:layout_weight="1"
                android:text="@string/antons_azbuka" />

            <Button
                android:id="@+id/button_max_azbuka"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_margin_8"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_weight="1"
                android:text="@string/maksims_azbuka" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_save_azbuka"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/dimen_margin_8"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_weight="1"
                android:text="@string/save_azbuka" />

            <Button
                android:id="@+id/button_load_azbuka"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button"
                android:layout_margin="@dimen/dimen_margin_8"
                android:layout_weight="1"
                android:text="@string/load_azbuka"/>
        </LinearLayout>
    </LinearLayout>
</layout>