<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="ru.tohaman.testempty.interfaces.WrongAnswerInt" />
    </data>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/big_padding"
        android:background="@drawable/ic_rounded_rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_wrong"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/c_lgr"
            android:padding="@dimen/small_padding"
            style="@style/TextAppearance.MaterialComponents.Headline3"
            android:text="@{viewModel.wrongAnswerText}"
            tools:text="@string/wrong_answer"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_margin="@dimen/middle_margin"
                android:text="@string/stop_game"
                android:onClick="@{() -> viewModel.stopGame()}"
                android:layout_weight="1"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:layout_margin="@dimen/middle_margin"
                style="@style/Widget.MaterialComponents.Button"
                android:text="@string/continue_game"
                android:onClick="@{() -> viewModel.continueGame()}"
                android:layout_weight="1"
                />


        </LinearLayout>
    </LinearLayout>
</layout>